Javascript Working on Time

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Firebase Connection -->
 	<script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
 	<!-- moment js -->
-	<script src="moment.js"></script>
+	<!-- <script src="moment.js"></script> -->
 	<!-- Moment.js -->
 	<script src="https://cdn.jsdelivr.net/npm/moment@2.19.1/moment.min.js"></script>
 </head>
